--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,15 @@
 [tool.poetry]
 name = "python-AGS4"
 version = "0.1.0"
-description = ""
+description = "A library to read and write AGS4 files using Pandas DataFrames"
 authors = ["Asitha Senanayake <asitha.senanayake@utexas.edu>"]
+license = "GPL-3.0"
+readme = "README.md"
+repository = "https://github.com/asitha-sena/python-AGS4"
 
 [tool.poetry.dependencies]
 python = "^3.7"
+pandas = "^1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
