--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -29,4 +29,5 @@ jobs:
         python -m pip install pandas pytest
     - name: Test with pytest
       run: |
+        cd /home/runner/work/python-ags4/tests
         pytest
