--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -27,7 +27,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pandas pytest
+    - name: Update system path
+      run: |
+        pwd
+        echo "/home/runner/work/python-ags4" >> $GITHUB_PATH
     - name: Test with pytest
       run: |
-        echo "::set-env name=PYTHONPATH::home/runner/work/python-ags4"
         pytest
