--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -26,12 +26,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pandas pytest
+        python -m pip install pandas pytest python-ags4
     - name: Update system path
       run: |
         echo "/home/runner/work/python-ags4" >> $GITHUB_PATH
         echo $GITHUB_PATH
     - name: Test with pytest
       run: |
-        echo "/home/runner/work/python-ags4" >> $GITHUB_PATH
+        echo $GITHUB_PATH
         pytest
