--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -34,10 +34,11 @@ jobs:
         echo $PATH
     - name: Update system path
       run: |
-        echo "/home/runner/work/python-ags4" >> $GITHUB_PATH
+        echo "/home/runner/work/python-ags4/python-ags4" >> $GITHUB_PATH
         echo $GITHUB_PATH
         echo $PATH
     - name: Test with pytest
       run: |
         echo $GITHUB_PATH
         echo $PATH
+        pytest
