--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pandas pytest python-ags4
+        python -m pip install pandas pytest
     - name: Echo path
       run: |
         echo $GITHUB_PATH
