--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.7']
+        python-version: ['3.6','3.7', '3.8', '3.9']
 
     steps:
     - uses: actions/checkout@v2
@@ -27,11 +27,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pandas pytest
-    - name: Echo path
-      run: |
-        echo $GITHUB_PATH
-        echo $GITHUB_ENV
-        echo $PATH
     - name: Update system path
       run: |
         echo "/home/runner/work/python-ags4/python-ags4" >> $GITHUB_PATH
