--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -12,10 +12,12 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
     strategy:
       matrix:
+        runs-on: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ['3.6','3.7', '3.8', '3.9']
+        
+    runs-on: ${{matrix.runs-on}}
 
     steps:
     - uses: actions/checkout@v2
