--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pandas pytest
+        python -m pip install pandas pytest openpyxl defusedxml
     - name: Update system path
       run: |
         echo "/home/runner/work/python-ags4/python-ags4" >> $GITHUB_PATH
