--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "python-AGS4"
-version = "0.1.6"
+version = "0.1.7"
 description = "A library to read and write AGS4 files using Pandas DataFrames"
 authors = ["Asitha Senanayake <asitha.senanayake@utexas.edu>"]
 license = "GPL-3.0"
@@ -10,6 +10,8 @@ repository = "https://github.com/asitha-sena/python-AGS4"
 [tool.poetry.dependencies]
 python = "^3.7"
 pandas = "^1.0"
+openpyxl = "^3.0"
+defusedxml = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
