Added rich as a dependency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas = "^1.0"
 openpyxl = "^3.0"
 defusedxml = "^0.6.0"
 click = "^7.0"
+rich = "^9.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
