--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [tool.poetry]
 name = "python-AGS4"
-version = "0.3.5"
+version = "0.3.6"
 description = "A library to read and write AGS4 files using Pandas DataFrames"
-authors = ["Asitha Senanayake <asitha.senanayake@utexas.edu>"]
+authors = ["Asitha Senanayake <asitha_sena@yahoo.com>"]
 license = "GPL-3.0"
 readme = "README.md"
-repository = "https://github.com/asitha-sena/python-AGS4"
+homepage = "https://github.com/asitha-sena/python-AGS4"
+repository = "https://gitlab.com/ags-data-format-wg/ags-python-library"
 
 [tool.poetry.dependencies]
 python = "^3.7"
