--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pandas pytest openpyxl defusedxml rich
-        python -m pip install python-ags4
+        python -m pip install .
     - name: Update system path
       run: |
         echo "/home/runner/work/python-ags4/python-ags4" >> $GITHUB_PATH
