--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         runs-on: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.7', '3.8', '3.9']
+        python-version: ['3.7', '3.8', '3.9', '3.10']
         
     runs-on: ${{matrix.runs-on}}
 
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pandas pytest openpyxl defusedxml rich
+        python -m pip install pytest
         python -m pip install .
     - name: Update system path
       run: |
@@ -39,4 +39,4 @@ jobs:
       run: |
         echo $GITHUB_PATH
         echo $PATH
-        python -m pytest
+        python -m pytest -v
