--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "python-AGS4"
-version = "0.3.7"
+version = "0.4.0"
 description = "A library to read and write AGS4 files using Pandas DataFrames"
 authors = ["Asitha Senanayake <asitha_sena@yahoo.com>"]
-license = "GPL-3.0"
+license = "LGPL-3.0"
 readme = "README.md"
 homepage = "https://github.com/asitha-sena/python-AGS4"
 repository = "https://gitlab.com/ags-data-format-wg/ags-python-library"
