--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest
+        python -m pip install pytest toml
         python -m pip install .
     - name: Update system path
       run: |
