--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -5,7 +5,7 @@ name: Test package
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, test_github_actions ]
   pull_request:
     branches: [ master ]
 
@@ -15,8 +15,8 @@ jobs:
     strategy:
       matrix:
         runs-on: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.7', '3.8', '3.9']
-        
+        python-version: ['3.7', '3.8', '3.9', '3.10']
+
     runs-on: ${{matrix.runs-on}}
 
     steps:
@@ -28,8 +28,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pandas pytest openpyxl defusedxml rich
-        python -m pip install python-ags4
+        python -m pip install pytest toml
+        python -m pip install .
     - name: Update system path
       run: |
         echo "/home/runner/work/python-ags4/python-ags4" >> $GITHUB_PATH
