--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,5 +33,5 @@ pages:
   artifacts:
     paths:
     - public
-  #rules:
-  #  - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+  rules:
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
