--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,13 @@ defusedxml = ">=0.6, <0.8"
 click = ">=7.0, <9.0"
 rich = ">=9.0, <14.0"
 
-[tool.poetry.dev-dependencies]
-pytest = "^7.3"
-toml = "^0.10"
-
 [tool.poetry.scripts]
 ags4_cli = "python_ags4.ags4_cli:main"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.3"
+toml = "^0.10"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
